--- a/pingcrm/composer.json
+++ b/pingcrm/composer.json
@@ -5,13 +5,12 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^7.4|^8.0",
         "ext-exif": "*",
         "ext-gd": "*",
-        "fakerphp/faker": "^1.9.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.6.4",
+        "inertiajs/inertia-laravel": "^0.5.3",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
@@ -19,10 +18,13 @@
     },
     "require-dev": {
         "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
-        "pestphp/pest": "^1.23",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-faker": "^1.0",
+        "pestphp/pest-plugin-laravel": "^1.2",
         "phpunit/phpunit": "^9.5.10",
         "roave/security-advisories": "dev-latest"
     },
